# sightseeker_app

./: .flutter-plugins-dependencies  .gitignore  README.md  firestore.rules  pubspec.yaml  test_photo_verification_openai.py
android/app/: build.gradle.kts
assets/: challenge_seed_data.json
backend/bedrock-agent/: agent-instruction.txt
backend/bedrock-agent/travelAgent/: .bedrock_agentcore.yaml  .gitignore  invoke_agent.py  pyproject.toml  requirements.txt
backend/bedrock-agent/travelAgent/src/: main.py  models.py
backend/bedrock-agent/travelAgent/src/prompts/: guide.j2  guide_user.j2  planner.j2  research.j2  research_user.j2
backend/browser-agent/: browser_agent.py  check_browser_status.py  diagnose_browser.py  discovered_challenges.json
backend/lib/: backend-stack.ts
backend/photo-verification/: .env.example  verify_photo.py
docs/: API_KEYS_SETUP.md
functions/: package-lock.json  package.json  tsconfig.json
functions/lib/: firebase-init.js  genkit.d.ts  genkit.js  index.d.ts  index.js
functions/src/: firebase-init.ts  genkit.ts  index.ts
ios/Flutter/: Debug.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase.json  firebase_options.dart  main.dart
lib/config/: api_keys.dart  api_keys.local.template.dart  api_keys_impl_io.dart  api_keys_impl_web.dart  api_keys_provider.dart  constants.dart  routes.dart  theme.dart
lib/controllers/: tts_controller.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+105 files in other folders)
